Fixed operation insertion bug